Added: pre-compile templates to HTML

--- a/Public/applets/MUE/layout.mustache
+++ b/Public/applets/MUE/layout.mustache
@@ -6,7 +6,7 @@
     <link href="/css/otfpoc.css" media="all" rel="stylesheet" type="text/css" />
     <link href="/applets/MUE/style.css" media="all" rel="stylesheet" type="text/css" />
     <link href="/applets/homepage/style.css" media="all" rel="stylesheet" type="text/css" />
-    <title>megaUNI Homepage</title>
+    <title>{{title}}</title>
   </head>
   <body>
     {{> markup}}
