--- a/Public/applets/homepage/markup.mustache
+++ b/Public/applets/homepage/markup.mustache
@@ -1,3 +1,6 @@
+<config title="megaUNI Home" />
+
+
     <script id="Welcome" type="text/applet"> 
       <div class="block" show_if="logged_in?">
         <p>You are logged in.</p>
