--- a/Public/applets/MUE/layout.mustache
+++ b/Public/applets/MUE/layout.mustache
@@ -6,10 +6,10 @@
     <link href="/css/otfpoc.css" media="all" rel="stylesheet" type="text/css" />
     <link href="/applets/MUE/style.css" media="all" rel="stylesheet" type="text/css" />
     <link href="/applets/homepage/style.css" media="all" rel="stylesheet" type="text/css" />
-    <title><% title %></title>
+    <title>[[ title ]]</title>
   </head>
   <body>
-    <%> markup %>
+    [[> markup ]]
     <script src="/scripts/jquery/dist/jquery.min.js"></script>
     <script src="/scripts/lodash/lodash.min.js"></script>
     <script src="/scripts/da99.applet.js/applet.js"></script>
