--- a/Public/applets/homepage/markup.mustache
+++ b/Public/applets/homepage/markup.mustache
@@ -43,7 +43,7 @@
       <p><a href="/nowhere">/nowhere</a></p>
       <div class="disclaimer">
         <p>
-          &copy; 2012-<span id="copyright_year_today">2015</span> megauni.com. Some rights reserved.
+          (c) 2012-<span id="copyright_year_today">2015</span> megauni.com. Some rights reserved.
         </p>
         <p>All other copyrights belong to their respective owners, who have no association to this site:</p>
         <p><span>Logo font: </span><a href="http://openfontlibrary.org/en/font/otfpoc">Aghja</a></p>
