Improved: dir name

--- a/Public/styles/otfpoc.css
+++ b/Public/styles/otfpoc.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'AghjaMedium';
-        src: url('/css/AghjaMedium.otf') format('opentype');
+        src: url('/styles/AghjaMedium.otf') format('opentype');
     font-weight: normal;
     font-style: normal;
       }
