--- a/Public/applets/MUE/layout.mustache
+++ b/Public/applets/MUE/layout.mustache
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="/css/vanilla.reset.css" media="all" rel="stylesheet" type="text/css" />
-    <link href="/css/fonts.css" media="all" rel="stylesheet" type="text/css" />
-    <link href="/css/otfpoc.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="/styles/vanilla.reset.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="/styles/fonts.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="/styles/otfpoc.css" media="all" rel="stylesheet" type="text/css" />
     <link href="/applets/MUE/style.css" media="all" rel="stylesheet" type="text/css" />
     <link href="/applets/homepage/style.css" media="all" rel="stylesheet" type="text/css" />
     <title>[[ title ]]</title>
   </head>
   <body>
     [[> markup ]]
-    <script src="/scripts/jquery/dist/jquery.min.js"></script>
-    <script src="/scripts/lodash/lodash.min.js"></script>
-    <script src="/scripts/da99.applet.js/applet.js"></script>
+    <script src="/vendor/bower/jquery/dist/jquery.min.js"></script>
+    <script src="/vendor/bower/lodash/lodash.min.js"></script>
+    <script src="/vendor/bower/da99.applet.js/applet.js"></script>
   </body>
 </html>
 
