--- a/Public/applets/MUE/layout.mustache
+++ b/Public/applets/MUE/layout.mustache
@@ -13,6 +13,7 @@
     <script src="/vendor/bower/jquery/dist/jquery.min.js"></script>
     <script src="/vendor/bower/lodash/lodash.min.js"></script>
     <script src="/vendor/bower/da99.applet.js/applet.js"></script>
+    [[& scripts ]]
   </body>
 </html>
 
