--- a/Public/applets/homepage/markup.mustache
+++ b/Public/applets/homepage/markup.mustache
@@ -1,39 +1,44 @@
 <config title="megaUNI Home" />
+<config scripts>
+  <script src="/applets/homepage/script.js"></script>
+</config>
 
+    <div class="hidden block" data-show_if="logged_in?">
+      <p>You are logged in.</p>
+    </div>
+
+    <div class="hidden block" data-show_if="!logged_in?">
+      <h3>Log-In</h3>
+      <div class="content">
+        <form action="/sign-in" id="sign_in" method="post">
+          <div class="fields">
+            <div class="field screen_name"><label for="LOGIN_SCREEN_NAME">Screen name:</label><input name="screen_name" type="text" value="" /></div>
+            <div class="field passphrase"><label for="LOGIN_PASS_PHRASE">Pass phrase:</label><input name="pswd" type="password" value="" /></div>
+            <div class="field buttons"><button class="submit">Log-In</button></div>
+          </div>
+        </form>
+      </div>
+    </div>
+
+    <div class="hidden block" data-show_if="!logged_in?">
+      <h3>Create a New Account</h3>
+      <div class="content">
+        <form action="/user" id="create_account" method="post">
+          <div class="fields">
+            <div class="field screen_name"><label for="NEW_CUSTOMER_SCREEN_NAME">Screen name:</label><input name="screen_name" type="text" value="" /></div>
+            <div class="field pswd"><label for="NEW_CUSTOMER_PASS_PHRASE"><span class="main">Pass phrase</span><span class="sub"> (for better security, use spaces and words)</span><span class="main">:</span></label><input name="pswd" type="password" value="" /></div>
+            <div class="field confirm_pass_phrase"><label for="NEW_CUSTOMER_CONFIRM_PASS_PHRASE"><span class="main">Re-type the pass phrase:</span></label><input name="confirm_pass_word" type="password" value="" /></div>
+            <div class="buttons"><input name="_csrf" type="hidden" value="{{_csrf}}" /><button class="submit">Create Account</button></div>
+          </div>
+        </form>
+      </div>
+    </div>
 
     <script id="Welcome" type="text/applet"> 
-      <div class="block" show_if="logged_in?">
-        <p>You are logged in.</p>
-      </div>
     </script>
     <script id="New_Session" type="text/applet">
-      <div class="block" show_if="!logged_in?">
-        <h3>Log-In</h3>
-        <div class="content">
-          <form action="/sign-in" id="sign_in" method="post">
-            <div class="fields">
-              <div class="field screen_name"><label for="LOGIN_SCREEN_NAME">Screen name:</label><input name="screen_name" type="text" value="" /></div>
-              <div class="field passphrase"><label for="LOGIN_PASS_PHRASE">Pass phrase:</label><input name="pswd" type="password" value="" /></div>
-              <div class="field buttons"><button class="submit">Log-In</button></div>
-            </div>
-          </form>
-        </div>
-      </div>
     </script>
     <script id="New_Customer" type="text/applet">
-      <div class="block" show_if="!logged_in?">
-        <h3>Create a New Account</h3>
-        <div class="content">
-          <form action="/user" id="create_account" method="post">
-            <div class="fields">
-              <div class="field screen_name"><label for="NEW_CUSTOMER_SCREEN_NAME">Screen name:</label><input name="screen_name" type="text" value="" /></div>
-              <div class="field pswd"><label for="NEW_CUSTOMER_PASS_PHRASE"><span class="main">Pass phrase</span><span class="sub"> (for better security, use spaces and words)</span><span class="main">:</span></label><input name="pswd" type="password" value="" /></div>
-              <div class="field confirm_pass_phrase"><label for="NEW_CUSTOMER_CONFIRM_PASS_PHRASE"><span class="main">Re-type the pass phrase:</span></label><input name="confirm_pass_word" type="password" value="" /></div>
-              <div class="buttons"><input name="_csrf" type="hidden" value="{{_csrf}}" /><button class="submit">Create Account</button></div>
-            </div>
-          </form>
-        </div>
-      </div>
     </script>
     <div class="block" id="intro">
       <h1 class="site"><span class="main">mega</span><span class="sub">UNI</span></h1>
