Improved: extracting HTML comments to use as template data/values

--- a/Public/applets/homepage/markup.mustache
+++ b/Public/applets/homepage/markup.mustache
@@ -1,7 +1,9 @@
-<config title="megaUNI Home" />
-<config scripts>
+<!-- title
+  megaUNI Home
+-->
+<!-- scripts
   <script src="/applets/homepage/script.js"></script>
-</config>
+-->
 
     <div class="hidden block" data-show_if="logged_in?">
       <p>You are logged in.</p>
@@ -34,12 +36,11 @@
       </div>
     </div>
 
-    <script id="Welcome" type="text/applet"> 
+    <script type="text/template">
+<!-- template -->
+      <div>code</div>
     </script>
-    <script id="New_Session" type="text/applet">
-    </script>
-    <script id="New_Customer" type="text/applet">
-    </script>
+
     <div class="block" id="intro">
       <h1 class="site"><span class="main">mega</span><span class="sub">UNI</span></h1>
       <p><a href="/home">/home</a></p>
