--- a/Public/applets/homepage/markup.mustache
+++ b/Public/applets/homepage/markup.mustache
@@ -8,6 +8,10 @@
   <script src="/applets/homepage/script.js"></script>
 -->
 
+    <div id="loading" data-hide_if="key? logged_in?">
+      Loading...
+    </div>
+
     <div class="hidden block" data-show_if="logged_in?">
       <p>You are logged in.</p>
     </div>
@@ -38,11 +42,6 @@
         </form>
       </div>
     </div>
-
-    <script type="text/template">
-<!-- template -->
-      <div>code</div>
-    </script>
 
     <div class="block" id="intro">
       <h1 class="site"><span class="main">mega</span><span class="sub">UNI</span></h1>
