Touchups and fixes.

--- a/Public/applets/homepage/markup.mustache
+++ b/Public/applets/homepage/markup.mustache
@@ -8,7 +8,7 @@
   <script src="/applets/homepage/script.js"></script>
 -->
 
-    <div id="loading" data-hide_if="key? logged_in?">
+    <div id="loading" data-hide_if="page_loaded?">
       Loading...
     </div>
 
