--- a/Public/applets/MUE/style.styl
+++ b/Public/applets/MUE/style.styl
@@ -58,3 +58,15 @@ p
 div.disclaimer
   color: #8E8E8E
 
+div.loading
+  form div.buttons
+    display: none
+  div.loading_msg
+    background-color: hover_color
+
+
+
+
+
+
+
