--- a/Public/applets/homepage/markup.mustache
+++ b/Public/applets/homepage/markup.mustache
@@ -16,7 +16,7 @@
       <p>You are logged in.</p>
     </div>
 
-    <div class="hidden block" data-show_if="!logged_in?">
+    <div class="hidden block form" data-show_if="!logged_in?">
       <h3>Log-In</h3>
       <div class="content">
         <form action="/sign-in" id="sign_in" method="post">
@@ -29,7 +29,7 @@
       </div>
     </div>
 
-    <div class="hidden block" data-show_if="!logged_in?">
+    <div class="hidden block form" data-show_if="!logged_in?">
       <h3>Create a New Account</h3>
       <div class="content">
         <form action="/user" id="create_account" method="post">
