--- a/Public/applets/MUE/layout.mustache
+++ b/Public/applets/MUE/layout.mustache
@@ -11,7 +11,9 @@
   <body>
     [[> markup ]]
     <script src="/vendor/bower/jquery/dist/jquery.min.js"></script>
+    <script src="/vendor/bower/jquery.serializeJSON/jquery.serializejson.min.js"></script>
     <script src="/vendor/bower/lodash/lodash.min.js"></script>
+    <script src="/vendor/bower/promisejs/promise.min.js"></script>
     <script src="/vendor/bower/da99.applet.js/applet.js"></script>
     [[& scripts ]]
   </body>
