--- a/Public/applets/MUE/style.css
+++ b/Public/applets/MUE/style.css
@@ -56,3 +56,9 @@ p {
 div.disclaimer {
   color: #8e8e8e;
 }
+div.loading form div.buttons {
+  display: none;
+}
+div.loading div.loading_msg {
+  background-color: #c0002c;
+}
