--- a/Public/applets/MUE/style.css
+++ b/Public/applets/MUE/style.css
@@ -60,5 +60,5 @@ div.loading form div.buttons {
   display: none;
 }
 div.loading div.loading_msg {
-  background-color: #c0002c;
+  background-color: #fffee2;
 }
