--- a/Public/applets/MUE/style.styl
+++ b/Public/applets/MUE/style.styl
@@ -62,7 +62,7 @@ div.loading
   form div.buttons
     display: none
   div.loading_msg
-    background-color: hover_color
+    background-color: highlight
 
 
 
