--- a/Public/applets/MUE/vars.styl
+++ b/Public/applets/MUE/vars.styl
@@ -7,6 +7,7 @@ dashed_border_color = #C7C7C7
 subtle_white        = #fffffc
 white               = #fff
 black               = #000
+highlight           = #FFFEE2
 
 border_radius()
   -moz-border-radius    arguments
