--- a/Public/applets/MUE/style.styl
+++ b/Public/applets/MUE/style.styl
@@ -64,6 +64,14 @@ div.loading
   div.loading_msg
     background-color: highlight
 
+div.form
+  div.field_invalid
+    border: 1px dashed error_highlight
+    padding: 4px
+  div.error_msg
+    color: error_highlight
+    font-style: italic
+    font-size: smaller
 
 
 
