--- a/Public/applets/MUE/vars.styl
+++ b/Public/applets/MUE/vars.styl
@@ -8,6 +8,7 @@ subtle_white        = #fffffc
 white               = #fff
 black               = #000
 highlight           = #FFFEE2
+error_highlight     = #FF2D2D
 
 border_radius()
   -moz-border-radius    arguments
