--- a/Public/applets/MUE/layout.mustache
+++ b/Public/applets/MUE/layout.mustache
@@ -15,6 +15,7 @@
     <script src="/vendor/bower/lodash/lodash.min.js"></script>
     <script src="/vendor/bower/promisejs/promise.min.js"></script>
     <script src="/vendor/bower/da99.applet.js/applet.js"></script>
+    <script src="/scripts/megauni.js"></script>
     [[& scripts ]]
   </body>
 </html>
