--- a/Public/applets/MUE/style.styl
+++ b/Public/applets/MUE/style.styl
@@ -67,11 +67,18 @@ div.loading
 div.form
   div.field_invalid
     border: 1px dashed error_highlight
-    padding: 4px
+    padding: 0.5em
   div.error_msg
     color: error_highlight
     font-style: italic
     font-size: smaller
+
+  div.success_msg
+    background-color: highlight
+    margin: 0.5em 0 0 0
+    padding: 0.5em
+    background-color: go
+    color: dark_text_light_bg
 
 
 
