--- a/Public/applets/MUE/vars.styl
+++ b/Public/applets/MUE/vars.styl
@@ -1,3 +1,4 @@
+
 bg_color            = #f5f5f5
 heading_color       = #616161
 sub_heading_color   = #8E8E8E
@@ -9,6 +10,8 @@ white               = #fff
 black               = #000
 highlight           = #FFFEE2
 error_highlight     = #FF2D2D
+go                  = #B8F3A3
+dark_text_light_bg  = #363636
 
 border_radius()
   -moz-border-radius    arguments
