--- a/Public/applets/MUE/style.styl
+++ b/Public/applets/MUE/style.styl
@@ -72,6 +72,9 @@ div.form
     color: error_highlight
     font-style: italic
     font-size: smaller
+  div.error_server
+    font-size: larger
+    padding: 1em 0
 
   div.success_msg
     background-color: highlight
