--- a/Public/applets/homepage/markup.mustache
+++ b/Public/applets/homepage/markup.mustache
@@ -32,7 +32,7 @@
     <div class="hidden block form" data-show_if="!logged_in?">
       <h3>Create a New Account</h3>
       <div class="content">
-        <form action="/user" id="create_account" method="post">
+        <form action="/user" id="create_account" method="post" data-on_respond_ok=":reload">
           <div class="fields">
 
             <div class="field screen_name">
