--- a/Public/applets/MUE/layout.mustache
+++ b/Public/applets/MUE/layout.mustache
@@ -6,6 +6,7 @@
     <link href="/styles/otfpoc.css" media="all" rel="stylesheet" type="text/css" />
     <link href="/applets/MUE/style.css" media="all" rel="stylesheet" type="text/css" />
     <link href="/applets/homepage/style.css" media="all" rel="stylesheet" type="text/css" />
+    [[& meta ]]
     <title>[[ title ]]</title>
   </head>
   <body>
