--- a/Public/applets/MUE/layout.mustache
+++ b/Public/applets/MUE/layout.mustache
@@ -15,8 +15,8 @@
     <script src="/vendor/bower/jquery.serializeJSON/jquery.serializejson.min.js"></script>
     <script src="/vendor/bower/lodash/lodash.min.js"></script>
     <script src="/vendor/bower/promisejs/promise.min.js"></script>
-    <script src="/scripts/applet.js"></script>
-    <script src="/scripts/megauni.js"></script>
+    <script src="/scripts/applet.babel.js"></script>
+    <script src="/scripts/megauni.babel.js"></script>
     [[& scripts ]]
   </body>
 </html>
