--- a/Public/applets/homepage/markup.mustache
+++ b/Public/applets/homepage/markup.mustache
@@ -5,7 +5,7 @@
   megaUNI Home
 -->
 <!-- scripts
-  <script src="/applets/homepage/script.js"></script>
+  <script src="/applets/homepage/script.babel.js"></script>
 -->
 <!-- meta
   <meta name="Description" CONTENT="Sign-In or Create an Account if you don't have one." />
